@@ -1,3 +1,7 @@
+2015-05-03  Jonathan Kew  <jfkthame@gmail.com>
+
+	* XeTeX_ext.c: use non-locking getc() for faster file reading.
+
 2015-03-27  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* image/mfileio.[ch]: Use mfgets() parameters as for fgets().
